# radioactivedecay

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py
.github/: issue_template.md  pull_request_template.md
.github/workflows/: 1_tests.yml  2_coverage.yml  3_code_formatting.yml  4_docs_build.yml  5_docs_deploy.yml  6_pypi_release.yml
doc/source/: index.rst
docs/: README.md
docs/source/: api.rst  basic_usage.rst  conf.py  decaydata.rst  decayfunctions.rst  fileio.rst  index.rst  installation.rst  introduction.rst  inventory.rst  nuclide.rst  overview.rst  plotting.rst  radionuclide.rst  theory.rst  tutorial.rst  usage.rst  utils.rst
notebooks/comparisons/: README.md
notebooks/comparisons/pyne/: atomic_masses_sympy.pickle  c.npz  c_inv_scipy.npz  c_inv_sympy.pickle  c_scipy.npz  c_sympy.pickle  cinverse.npz  decay_consts_sympy.pickle  decay_data.npz  pyne_dataset.ipynb  pyne_full.csv  pyne_truncated.csv  radioactivedecay_high_precision_pyne_pyne_missing.csv  radioactivedecay_high_precision_pyne_rd_missing.csv  radionuclides_decay_consts.npz  rd_high_precision_pyne_truncated_compare.ipynb  rd_pyne_truncated_compare.ipynb  year_conversion_sympy.pickle
notebooks/comparisons/radiological_toolbox/: radiological_toolbox_compare.ipynb
notebooks/comparisons/radiological_toolbox/radiological_toolbox_3.0.0_results/: Ag-108.csv  Am-238.csv  Am-246m.csv  Au-187.csv  Ba-133m.csv  Bk-245.csv  Br-77.csv  Cd-119.csv  Ce-133m.csv  Ce-141.csv  Cf-254.csv  Cs-121m.csv  Cu-66.csv  Fr-219.csv  Ga-70.csv  Hf-181.csv  In-114m.csv  Ir-195m.csv  Kr-76.csv  Kr-81.csv  Lu-181.csv  Mo-90.csv  Nb-88m.csv  Nb-99.csv  Nd-136.csv  Ni-57.csv  Np-233.csv  O-14.csv  Pa-234.csv  Pb-209.csv  Pm-148m.csv  Po-218.csv  Pt-188.csv  Pt-189.csv  Ra-220.csv  Ra-224.csv  Re-187.csv  Rh-106m.csv  Sb-126.csv  Sb-131.csv  (+10 more)
notebooks/icrp107_dataset/: README.md  analysis_icrp107.ipynb  analysis_icrp107_branching_fractions.ipynb  atomic_masses_sympy_1.9.pickle  c_inv_scipy.npz  c_inv_sympy.pickle  c_scipy.npz  c_sympy.pickle  decay_consts_sympy.pickle  decay_consts_sympy_1.9.pickle  decay_data.npz  element_list.csv  icrp.csv  icrp107_dataset.ipynb  nubase_3.mas20.txt  radionuclides_decay_consts.npz
notebooks/preprocess_icrp-07_dataset/: ICRP-07.NDX  LICENSE.TXT  c.npz  cinverse.npz  preprocess_icrp-07_for_radioactivedecay.ipynb  radionuclide_key.csv
notebooks/tests/: create_benchmark.ipynb  test_script.ipynb  ver_0.0.4_halflife_0.0.pickle  ver_0.0.4_halflife_0.01.pickle  ver_0.0.4_halflife_0.1.pickle  ver_0.0.4_halflife_1.0.pickle  ver_0.0.4_halflife_10.0.pickle  ver_0.0.4_halflife_100.0.pickle
paper/: paper.bib  paper.md
radioactivedecay/: __init__.py  converters.py  decaydata.py  decayenergy.py  decayfunctions.py  element_symbols.csv  fileio.py  inventory.py  nuclide.py  plots.py  radionuclide.py  utils.py
radioactivedecay/decay_energies/: decay_energies.pickle  meta_energies.pickle
radioactivedecay/icrp107/: c.npz  c_inv_sympy.pickle  c_scipy.npz  c_sympy.pickle  cinverse.npz  decay_data.npz  radionuclide_key.csv  radionuclides_decay_consts.npz  year_conversion_sympy.pickle
radioactivedecay/icrp107_ame2020_nubase2020/: atomic_masses_sympy.pickle  c_inv_scipy.npz  c_inv_sympy_1.8.pickle  c_inv_sympy_1.9.pickle  c_scipy.npz  c_sympy_1.8.pickle  c_sympy_1.9.pickle  decay_consts_sympy_1.8.pickle  decay_consts_sympy_1.9.pickle  decay_data.npz
tests/: test_converters.py  test_decaydata.py  test_decayfunctions.py  test_inventory.py  test_nuclide.py  test_plots.py  test_radioactivedecay.py  test_radionuclide.py  test_utils.py
